APB-288 bugfix search list, removed wrapping div profile_info_search, bugfix checking profile_btn_top if exists in common

--- a/apps/app1/css/app.css
+++ b/apps/app1/css/app.css
@@ -129,6 +129,9 @@ body.font_arabic_nastaliq #user_menu_default_avatar{
 }
 
 /*common*/
+#profile_search_list_wrap{
+	top:62px;
+}
 #profile_btn_top{
 	bottom: 0px !important;
 }
